--- a/static/2k22.html
+++ b/static/2k22.html
@@ -191,7 +191,7 @@ input {cursor: pointer;}
 </div>
 <a> Click This </a>
 <form class="pointer">
-<input type="submit" value="https://discord.com" />
+<input type="submit" value="https://www.xbox.com/en-US/play/games/nba-2k22-for-xbox-one/9N9PDB02QD7T" />
 </form>
 <footer align="left">
 </footer>
