--- a/static/BeamNg.Drive.html
+++ b/static/BeamNg.Drive.html
@@ -191,7 +191,7 @@ input {cursor: pointer;}
 </div>
 <a> Click This </a>
 <form class="pointer">
-<input type="submit" value="https://discord.com" />
+<input type="submit" value="https://play.geforcenow.com/games?game-id=f722ac3f-11b7-41e7-b971-5711dad43339&lang=en_US&asset-id=01_4ac6ef8e-32d8-4058-b91a-5a487bd96e55" />
 </form>
 <footer align="left">
 </footer>
