--- a/static/MotoGP 20.html
+++ b/static/MotoGP 20.html
@@ -191,7 +191,7 @@ input {cursor: pointer;}
 </div>
 <a> Click This </a>
 <form class="pointer">
-<input type="submit" value="https://discord.com" />
+<input type="submit" value="https://play.geforcenow.com/games?game-id=acbb660f-9ee9-46b9-89ed-16b7538952a7&lang=en_US&asset-id=01_56a93571-220b-4985-b155-dabd16971608" />
 </form>
 <footer align="left">
 </footer>
