--- a/static/Payday2.html
+++ b/static/Payday2.html
@@ -191,7 +191,7 @@ input {cursor: pointer;}
 </div>
 <a> Click This </a>
 <form class="pointer">
-<input type="submit" value="https://discord.com" />
+<input type="submit" value="https://play.geforcenow.com/games?game-id=cf23e77f-14b6-4d2c-a012-8a06babbad42&lang=en_US&asset-id=01_5263b933-2de8-4784-abe0-1176bee28864" />
 </form>
 <footer align="left">
 </footer>
