--- a/static/Ready Or Not.html
+++ b/static/Ready Or Not.html
@@ -191,7 +191,7 @@ input {cursor: pointer;}
 </div>
 <a> Click This </a>
 <form class="pointer">
-<input type="submit" value="https://discord.com" />
+<input type="submit" value="https://play.geforcenow.com/games?game-id=19c91ffc-532a-4c00-871c-48d1323066aa&lang=en_US&asset-id=01_88f624c6-dedf-496e-a2ad-cd999e2ebb42" />
 </form>
 <footer align="left">
 </footer>
