--- a/static/Ride 4.html
+++ b/static/Ride 4.html
@@ -191,7 +191,7 @@ input {cursor: pointer;}
 </div>
 <a> Click This </a>
 <form class="pointer">
-<input type="submit" value="https://discord.com" />
+<input type="submit" value="https://play.geforcenow.com/games?game-id=8d16fc64-9e77-4171-ab58-fc8f29d08132&lang=en_US&asset-id=01_04e3d5a8-5f49-4acb-b99a-f157095cb552" />
 </form>
 <footer align="left">
 </footer>
