--- a/static/TCRainbow6-gfn.html
+++ b/static/TCRainbow6-gfn.html
@@ -191,7 +191,7 @@ input {cursor: pointer;}
 </div>
 <a> Click This </a>
 <form class="pointer">
-<input type="submit" value="https://discord.com" />
+<input type="submit" value="https://play.geforcenow.com/games?game-id=1dd07d47-6601-42f7-80e9-e4d8db08ea1b&lang=en_US&asset-id=01_071d7902-d8ce-4e86-9c1d-aefb1c34378b" />
 </form>
 <footer align="left">
 </footer>
