--- a/static/Trackmania.html
+++ b/static/Trackmania.html
@@ -191,7 +191,7 @@ input {cursor: pointer;}
 </div>
 <a> Click This </a>
 <form class="pointer">
-<input type="submit" value="https://discord.com" />
+<input type="submit" value="https://play.geforcenow.com/games?game-id=f03fac40-4a56-4a31-a02a-5bd5e6b065d3&lang=en_US&asset-id=01_1dd713fa-efc2-4e4b-b6d9-ece88962e68b" />
 </form>
 <footer align="left">
 </footer>
