--- a/static/Uno.html
+++ b/static/Uno.html
@@ -191,7 +191,7 @@ input {cursor: pointer;}
 </div>
 <a> Click This </a>
 <form class="pointer">
-<input type="submit" value="https://discord.com" />
+<input type="submit" value="https://play.geforcenow.com/games?game-id=a3fb02cf-564f-416d-90da-9116471be448&lang=en_US&asset-id=01_47a512d5-3fcc-4eb0-83b5-6f581d776d50" />
 </form>
 <footer align="left">
 </footer>
