--- a/static/Unturned.html
+++ b/static/Unturned.html
@@ -191,7 +191,7 @@ input {cursor: pointer;}
 </div>
 <a> Click This </a>
 <form class="pointer">
-<input type="submit" value="https://discord.com" />
+<input type="submit" value="https://play.geforcenow.com/games?game-id=5b34bcc1-f5a4-4414-b65a-cb11e8954377&lang=en_US&asset-id=01_27adcda1-be61-4511-bc87-725ec682e64a" />
 </form>
 <footer align="left">
 </footer>
