--- a/static/War Thunder.html
+++ b/static/War Thunder.html
@@ -191,7 +191,7 @@ input {cursor: pointer;}
 </div>
 <a> Click This </a>
 <form class="pointer">
-<input type="submit" value="https://discord.com" />
+<input type="submit" value="https://play.geforcenow.com/games?game-id=956b4ff0-4fa7-43ca-a565-a552723977bb&lang=en_US&asset-id=01_f769d767-a940-44bf-bebd-fb7e32e87a42" />
 </form>
 <footer align="left">
 </footer>
