--- a/static/Youtube.html
+++ b/static/Youtube.html
@@ -191,7 +191,7 @@ input {cursor: pointer;}
 </div>
 <a> Click This </a>
 <form class="pointer">
-<input type="submit" value="https://discord.com" />
+<input type="submit" value="youtube.com" />
 </form>
 <footer align="left">
 </footer>
