--- a/static/SoundCloud.html
+++ b/static/SoundCloud.html
@@ -191,12 +191,12 @@ input {cursor: pointer;}
 </div>
 <a> Click This </a>
 <form class="pointer">
-<input type="submit" value="https://open.spotify.com/" />
+<input type="submit" value="https://soundcloud.com" />
 </form>
 <footer align="left">
 </footer>
 <script src="uv/uv.bundle.js"></script>
 <script src="uv/uv.config.js"></script>
 <script src="index.js"></script>
-</body> 
+</body>
 </html>
