--- a/static/uv.html
+++ b/static/uv.html
@@ -6,7 +6,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=Roboto&display=swap');
         body {
-            background: #111;
+            background: rgb(0, 0, 0);
             display: flex;
             flex-direction: column;
             justify-content: center;
