--- a/static/index.html
+++ b/static/index.html
@@ -4,22 +4,25 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Kardna | Zenfy</title>
+    <title>Kardna</title>
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#434c5e">
     <meta name="googlebot" content="index, follow, snippet" />
     <link href="index.css" rel="stylesheet">
+    </div>
+</head>
 
+    <div id="particles-js"></div>
 <body>
-
     <div title="Ultraviolet Logo" class="logo-wrapper">
-        <img class="logo" src="uv.png"/>
-        <h1>Kardna | Zenfy</h1>
+        <h1>Kardna</h1>
     </div>
     <form>
         <input placeholder="Search the web">
     </form>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="uv/uv.bundle.js"></script>
     <script src="uv/uv.config.js"></script>
+    <script src="particles.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
