--- a/static/Menu.html
+++ b/static/Menu.html
@@ -66,29 +66,8 @@ body {
     <h2>Kardna Proxy</h2>
     <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
     <ul id="myMenu">
-      <li><a href="2k22.html">2k22</a></li>
-      <li><a href="amongus.html">AmongUs</a></li>
-      <li><a href="apex.html">Apex Legends</a></li>
-      <li><a href="BeamNg.Drive.html">BeanNg.Drive</a></li>
-      <li><a href="cg.html">Crazy Games</a></li>
-      <li><a href="csgo.html">Csgo</a></li>
-      <li><a href="discord.html">Discord</a></li>
-      <li><a href="fng.html">Fortnite</a></li>
-      <li><a href="krunker.io.html">Krunker.io</a></li>
-      <li><a href="MotoGP 20.html">MotoGP 20</a></li>
-      <li><a href="Payday2.html">Payday 2</a></li>
-      <li><a href="Ready Or Not.html">Ready Or Not</a></li>
-      <li><a href="Ride 4.html">Ride 4</a></li>
-      <li><a href="roblox.html">Roblox</a></li>
-      <li><a href="rust.html">Rust</a></li>
-      <li><a href="skate3.html">Skate 3</a></li>
-      <li><a href="TCRainbow6-gfn.html">Rainbow 6</a></li>
-      <li><a href="tf2.html">Team Fortress 2</a></li>
-      <li><a href="Trackmania.html">Trackmania</a></li>
-      <li><a href="twitch.html">Twitch</a></li>
-      <li><a href="Uno.html">Uno</a></li>
-      <li><a href="Unturned.html">Unturned</a></li>
-    </ul>
+      <li><a href="./uv.html#aHR0cHM6Ly9wbGF5LmdlZm9yY2Vub3cuY29tL2dhbWVzP2dhbWUtaWQ9NDZiZmFiMDYtZDg2NC00NjVkLTllNTYtMmQ5ZTQ1Y2RlZTBhJmxhbmc9ZW5fVVMmYXNzZXQtaWQ9MDFfNzdmY2Y5OTgtODVmNi00YmUwLWJhZTktNDNhODlhZDc1YWI3">Fortnite</a></li>
+      <li><a href="./uv.html#aHR0cHM6Ly9ub3cuZ2cvcGxheS9yb2Jsb3gtY29ycG9yYXRpb24vNTM0OS9yb2Jsb3g=">Roblox</a></li>
   </div>
   
   <div class="right" style="background-color:#ddd;">
