--- a/static/index.html
+++ b/static/index.html
@@ -1,28 +1,22 @@
-<!DOCTYPE html>
-<html>
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Kardna</title>
-    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#434c5e">
-    <meta name="googlebot" content="index, follow, snippet" />
-    <link href="index.css" rel="stylesheet">
-    </div>
+  <title>Kardna</title>
+  <link href="index.css" rel="stylesheet">
+  <link href="nav.css" rel="stylesheet">
+ 
 </head>
 
-    <div id="particles-js"></div>
 <body>
-    <div title="Ultraviolet Logo" class="logo-wrapper">
-        <h1>Kardna</h1>
-    </div>
-    <form>
-        <input placeholder="Search the web">
-    </form>
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="uv/uv.bundle.js"></script>
-    <script src="uv/uv.config.js"></script>
-    <script src="particles.js"></script>
-    <script src="index.js"></script>
+  <div id="particles-js"></div>
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script src="./particles.js"></script>
+  <img STYLE="position:absolute; TOP:250px; RIGHT:425px; WIDTH:1050; HEIGHT:450px" src="./imgs/Kardna Text.png"></img>
+  <nav>
+    <ul class="nav">
+      <li><a href="./index.html">Home</a></li>
+      <li><a href="./proxy.html">Search</a></li>
+      <li><a href="#!">Games</a></li>
+      <li><a href="#!">Movies</a></li>
+      <li><a href="#!">Music</a></li>
+    </ul>
+  </nav>
 </body>
-</html>
