--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
     <ul class="nav">
       <li><a href="./index.html">Home</a></li>
       <li><a href="./proxy.html">Search</a></li>
-      <li><a href="#!">Games</a></li>
+      <li><a href="https://blitziskool.github.io/YARDNA/">Games</a></li>
       <li><a href="#!">Movies</a></li>
       <li><a href="#!">Music</a></li>
     </ul>
