--- a/static/index.html
+++ b/static/index.html
@@ -2,14 +2,18 @@
   <title>Kardna</title>
   <link href="index.css" rel="stylesheet">
   <link href="nav.css" rel="stylesheet">
- 
+ <script>
+  if(top!=self){
+    top.location.replace(document.location);
+    alert("For security reasons, framing is not allowed; click OK to remove the frames.")
+}
+ </script>
 </head>
 
 <body>
   <div id="particles-js"></div>
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script src="./particles.js"></script>
-  <img STYLE="position:absolute; TOP:250px; RIGHT:425px; WIDTH:1050; HEIGHT:450px" src="./imgs/Kardna Text.png"></img>
   <nav>
     <ul class="nav">
       <li><a href="./index.html">Home</a></li>
@@ -19,4 +23,5 @@
       <li><a href="#!">Music</a></li>
     </ul>
   </nav>
+  <img class="kardimg" src="./imgs/Kardna Text.png"></img>
 </body>
