--- a/static/index.html
+++ b/static/index.html
@@ -14,14 +14,15 @@
   <div id="particles-js"></div>
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script src="./particles.js"></script>
-  <nav>
+  <nav class="ka-boom">
     <ul class="nav">
-      <li><a href="./index.html">Home</a></li>
-      <li><a href="./proxy.html">Search</a></li>
-      <li><a href="https://blitziskool.github.io/YARDNA/">Games</a></li>
-      <li><a href="#!">Movies</a></li>
-      <li><a href="#!">Music</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./proxy.html">Search</a></li>
+          <li><a href="./games.html">Games</a></li>
+          <li><a href="./movies.html">Movies</a></li>
+          <li><a href="./music.html">Music</a></li>
     </ul>
-  </nav>
+</nav>
+  
   <img class="kardimg" src="./imgs/Kardna Text.png"></img>
 </body>
