--- a/static/proxy.html
+++ b/static/proxy.html
@@ -14,15 +14,15 @@
 
     <div id="particles-js"></div>
 <body>
-    <nav>
+    <nav class="ka-boom">
         <ul class="nav">
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./proxy.html">Search</a></li>
-            <li><a href="https://blitziskool.github.io/YARDNA/">Games</a></li>
-            <li><a href="#!">Movies</a></li>
-            <li><a href="#!">Music</a></li>
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./proxy.html">Search</a></li>
+              <li><a href="./games.html">Games</a></li>
+              <li><a href="./movies.html">Movies</a></li>
+              <li><a href="./music.html">Music</a></li>
         </ul>
-      </nav>
+    </nav>
     <div title="Ultraviolet Logo" class="logo-wrapper">
         <h1>Kardna</h1>
     </div>
