--- a/static/index.html
+++ b/static/index.html
@@ -14,6 +14,7 @@
   <div id="particles-js"></div>
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script src="./particles.js"></script>
+  <script src="./fram.js"></script>
   <nav class="ka-boom">
     <ul class="nav">
           <li><a href="./index.html">Home</a></li>
@@ -26,3 +27,4 @@
   
   <img class="kardimg" src="./imgs/Kardna Text.png"></img>
 </body>
+
