--- a/static/index.html
+++ b/static/index.html
@@ -14,14 +14,14 @@
   <div id="particles-js"></div>
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script src="./particles.js"></script>
-  <script src="./fram.js"></script>
   <nav class="ka-boom">
     <ul class="nav">
           <li><a href="./index.html">Home</a></li>
-          <li><a href="./proxy.html">Search</a></li>
+          <li><a href="./choice.html">Search</a></li>
           <li><a href="./games.html">Games</a></li>
           <li><a href="./movies.html">Movies</a></li>
           <li><a href="./music.html">Music</a></li>
+          <li><a href="./settings.html">Settings</a></li>
     </ul>
 </nav>
   
