--- a/static/movies.html
+++ b/static/movies.html
@@ -4,12 +4,14 @@
 <nav class="ka-boom">
     <ul class="nav">
           <li><a href="./index.html">Home</a></li>
-          <li><a href="./proxy.html">Search</a></li>
+          <li><a href="./choice.html">Search</a></li>
           <li><a href="./games.html">Games</a></li>
           <li><a href="./movies.html">Movies</a></li>
           <li><a href="./music.html">Music</a></li>
+          <li><a href="./settings.html">Settings</a></li>
     </ul>
 </nav>
+  
 <iframe src="./uv.html#aHR0cHM6Ly9yaW56cnkuc3RyZWFtLzA6Lw==" style="position:fixed; top:72px; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:-1;">
     Your browser doesn't support iframes
 </iframe>
