--- a/static/music.html
+++ b/static/music.html
@@ -4,10 +4,11 @@
 <nav class="ka-boom">
     <ul class="nav">
           <li><a href="./index.html">Home</a></li>
-          <li><a href="./proxy.html">Search</a></li>
+          <li><a href="./choice.html">Search</a></li>
           <li><a href="./games.html">Games</a></li>
           <li><a href="./movies.html">Movies</a></li>
           <li><a href="./music.html">Music</a></li>
+          <li><a href="./settings.html">Settings</a></li>
     </ul>
 </nav>
 <iframe src="./uv.html#aHR0cHM6Ly9iZW11c2ljLjEudmVidG8uY29tLw==" style="position:fixed; top:72px; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:-1;">
