--- a/static/proxy.html
+++ b/static/proxy.html
@@ -17,7 +17,7 @@
     <nav class="ka-boom">
         <ul class="nav">
               <li><a href="./index.html">Home</a></li>
-              <li><a href="./proxy.html">Search</a></li>
+              <li><a href="./choice.html">Search</a></li>
               <li><a href="./games.html">Games</a></li>
               <li><a href="./movies.html">Movies</a></li>
               <li><a href="./music.html">Music</a></li>
