--- a/static/ultraviolet.html
+++ b/static/ultraviolet.html
@@ -8,7 +8,15 @@
         <link href="nav.css" rel="stylesheet">
     </head>
     <body>
-
+        <nav class="ka-boom">
+            <ul class="nav">
+                  <li><a href="./index.html">Home</a></li>
+                  <li><a href="./choice.html">Search</a></li>
+                  <li><a href="./games.html">Games</a></li>
+                  <li><a href="./movies.html">Movies</a></li>
+                  <li><a href="./music.html">Music</a></li>
+            </ul>
+        </nav>
         <iframe id="iframe_frame" src=""></iframe>
         <main>
             <div class="proHead">
@@ -20,11 +28,6 @@
                     <button class="proButton" type="submit"><i class="fa fa-search"></i></button>
                     <button class="proButton" type="button" onclick="uvStealth()"><i class="fa fa-eye-slash"></i></button>
                 </form>
-            </div>
-            <div style="text-align:center">
-                <button class="siteButton" onclick="location.href=__uv$config.prefix + __uv$config.encodeUrl('https://discord.com/login')"><i class="fab fa-discord"></i>Discord</button>
-                <button class="siteButton" onclick="location.href=__uv$config.prefix + __uv$config.encodeUrl('https://www.youtube.com')"><i class="fab fa-youtube"></i>YouTube</button>
-                <button class="siteButton" onclick="location.href=__uv$config.prefix + __uv$config.encodeUrl('https://reddit.com')"><i class="fab fa-reddit"></i>Reddit</button>
             </div>
         </main>
         <!-- <script src="scripts/main.js"></script> -->
