--- a/static/womginx.html
+++ b/static/womginx.html
@@ -8,7 +8,15 @@
         <link href="nav.css" rel="stylesheet">
     </head>
     <body>
-        
+        <nav class="ka-boom">
+            <ul class="nav">
+                  <li><a href="./index.html">Home</a></li>
+                  <li><a href="./choice.html">Search</a></li>
+                  <li><a href="./games.html">Games</a></li>
+                  <li><a href="./movies.html">Movies</a></li>
+                  <li><a href="./music.html">Music</a></li>
+            </ul>
+        </nav>
         <iframe id="iframe_frame" src=""></iframe>
         <main>
             <div class="proHead">
