--- a/static/proxy.html
+++ b/static/proxy.html
@@ -23,7 +23,7 @@
               <li><a href="./music.html">Music</a></li>
         </ul>
     </nav>
-    <div title="Ultraviolet Logo" class="logo-wrapper">
+    <div" class="logo-wrapper">
         <h1>Kardna</h1>
     </div>
     <form>
