--- a/static/womginx.html
+++ b/static/womginx.html
@@ -24,7 +24,7 @@
             </div>
             <div class="proBar">
                 <form id="womf">
-                    <input type="text" autocomplete="off" name="url" id="womurl" placeholder="Search the web freely...">
+                    <input type="text" autocomplete="off" name="url" id="womurl" placeholder="">
                     <button class="proButton" type="submit"><i class="fa fa-search"></i></button>
                     <button class="proButton" type="button" onclick="womStealth()"><i class="fa fa-eye-slash"></i></button>
                 </form>
