--- a/static/settings.html
+++ b/static/settings.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="./styles/main.css">
+        <link rel="stylesheet" href="./index.css">
+        <link rel="stylesheet" href="./nav.css">
         <title>Kardna | Settings</title>
     </head>
     <body  class="settingsBody">
+        <nav class="ka-boom">
+            <ul class="nav">
+                  <li><a href="./index.html">Home</a></li>
+                  <li><a href="./choice.html">Search</a></li>
+                  <li><a href="./games.html">Games</a></li>
+                  <li><a href="./movies.html">Movies</a></li>
+                  <li><a href="./music.html">Music</a></li>
+                  <li><a href="./settings.html">Settings</a></li>
+            </ul>
+        </nav>
         <div id="particles-js"></div>
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
         <script src="./particles.js"></script>
         <h class="settingsHead">Settings</h>
-        <div>
-            <input class="settingsInput" id="tabtitle" placeholder="Ex: Google Drive" autocomplete="off"></input><button class="settingsButton" onclick="tabtitle()" name="cloakButton">Title</button><button class="settingsButton" onclick="resetTab()" name="cloakButton"><i class="fa fa-redo-alt"></i></button>
-        </div>
         <p1 class="settingsP">
             <br>
-           Set what you want your tab title to be !
+           In Development
         </p1>
         <script src="./scripts/main.js"></script>
     </body>
