--- a/static/index.html
+++ b/static/index.html
@@ -2,12 +2,7 @@
   <title>Kardna</title>
   <link href="index.css" rel="stylesheet">
   <link href="nav.css" rel="stylesheet">
- <script>
-  if(top!=self){
-    top.location.replace(window.self.location.href);
-    alert("For security reasons, framing is not allowed; click OK to remove the frames.")
-}
- </script>
+  <script href="./fram.js"></script>
 </head>
 
 <body>
