--- a/static/womginx.html
+++ b/static/womginx.html
@@ -15,6 +15,7 @@
                   <li><a href="./games.html">Games</a></li>
                   <li><a href="./movies.html">Movies</a></li>
                   <li><a href="./music.html">Music</a></li>
+                  <li><a href="./settings.html">Settings</a></li>
             </ul>
         </nav>
         <iframe id="iframe_frame" src=""></iframe>
