--- a/static/proxy.html
+++ b/static/proxy.html
@@ -21,6 +21,7 @@
               <li><a href="./games.html">Games</a></li>
               <li><a href="./movies.html">Movies</a></li>
               <li><a href="./music.html">Music</a></li>
+              <li><a href="./settings.html">Settings</a></li>
         </ul>
     </nav>
     <div" class="logo-wrapper">
