--- a/static/womginx.html
+++ b/static/womginx.html
@@ -7,6 +7,7 @@
         <title>Kardna | Womginx</title>
         <link href="nav.css" rel="stylesheet">
     </head>
+    <div id="particles-js"></div>
     <body>
         <nav class="ka-boom">
             <ul class="nav">
@@ -46,5 +47,7 @@
             }, false);
         }, false);
         </script>
+            <script src="particles.js"></script>
+            <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     </body>
 </html>
