--- a/static/ultraviolet.html
+++ b/static/ultraviolet.html
@@ -7,6 +7,7 @@
         <title>Kardna | Ultraviolet</title>
         <link href="nav.css" rel="stylesheet">
     </head>
+    <div id="particles-js"></div>
     <body>
         <nav class="ka-boom">
             <ul class="nav">
@@ -34,5 +35,7 @@
         <script src="uv/uv.bundle.js"></script>
         <script src="uv/uv.config.js"></script>
         <script src="scripts/index.js"></script>
+        <script src="particles.js"></script>
+        <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     </body>
 </html>
